--- a/appsettings.json
+++ b/appsettings.json
@@ -18,6 +18,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-      "ConnectionStr": "Server=127.0.0.1;uid=root;pwd=12345;database=teacherstudentdb"
+      "ConnectionStr": "Server=localhost;uid=root;pwd=12345;database=teacherstudentdb"
     }
   }
